@@ -2,6 +2,7 @@
 
 	* Fixed bug: #5052: Form action URL is not htmlspecialchared (patch by Michael Stucki)
 	* Fixed bug: #5072: Web>Info>Log - ID of BE user is displayed instead of its username
+	* Fixed bug: #5073: Tools>User Admin>List users online is broken
 
 2007-02-27  Martin Kutschker  <martin.t.kutschker@blackbox.net>
 
